Delete tensorboard files

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ ENV/
 /tensorflow_word2vec/word2vec_model-100000.meta
 /tensorflow_word2vec/word2vec_model-100000.index
 /tensorflow_word2vec/word2vec_model-100000.data-00000-of-00001
+/tensorflow_word2vec/graphs/
